--- a/web/atividades/atividades.html
+++ b/web/atividades/atividades.html
@@ -12,7 +12,7 @@
         <div class="professor-info">
           <span id="professor-nome"></span>
         </div>
-        <h1>Escola Linda</h1>
+        <h1>Escola</h1>
         <a href="/web/dashboard/dashboard.html">Voltar</a>
       </nav>
     </header>
